# rocm-scratch

./: .gitignore  CMakeLists..txt.1.working  CMakeLists.txt  CMakeLists.txt.sample  Makefile  block-matrix-mul.cpp  compile_commands.json  helpcc  matrix-transpose-main.cpp  matrix-transpose.cpp  threadfence_system.cpp  threadfence_system2.cpp  transpose.cuh
